welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value vuBiscuit
    if (vuBiscuit){
        ^Program:5: error: not found: value vuBiscuit
      vuBiscuit=true
      ^Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
  recule(6)
        ^